crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI041_PYI041.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
error[PYI041]: PYI041.py:22:14: Use `float` instead of `int | float`

   |
22 | def f0(arg1: float | int) -> None:
   |              ^^^^^^^^^^^
23 |     ...
   |
error[PYI041]: PYI041.py:26:30: Use `complex` instead of `float | complex`

   |
26 | def f1(arg1: float, *, arg2: float | list[str] | type[bool] | complex) -> None:
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
27 |     ...
   |
error[PYI041]: PYI041.py:30:28: Use `float` instead of `int | float`

   |
30 | def f2(arg1: int, /, arg2: int | int | float) -> None:
   |                            ^^^^^^^^^^^^^^^^^
31 |     ...
   |
error[PYI041]: PYI041.py:38:24: Use `float` instead of `int | float`

   |
38 | async def f4(**kwargs: int | int | float) -> None:
   |                        ^^^^^^^^^^^^^^^^^
39 |     ...
   |
error[PYI041]: PYI041.py:46:24: Use `complex` instead of `float | complex`

   |
44 |         ...
45 | 
46 |     def bad(self, arg: int | float | complex) -> None:
   |                        ^^^^^^^^^^^^^^^^^^^^^
47 |         ...
   |
error[PYI041]: PYI041.py:46:24: Use `complex` instead of `int | complex`

   |
44 |         ...
45 | 
46 |     def bad(self, arg: int | float | complex) -> None:
   |                        ^^^^^^^^^^^^^^^^^^^^^
47 |         ...
   |
