crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI041_PYI041.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
error[PYI041]: PYI041.pyi:21:14: Use `float` instead of `int | float`

   |
21 | def f0(arg1: float | int) -> None: ...  # PYI041
   |              ^^^^^^^^^^^
   |
error[PYI041]: PYI041.pyi:24:30: Use `complex` instead of `float | complex`

   |
24 | def f1(arg1: float, *, arg2: float | list[str] | type[bool] | complex) -> None: ...  # PYI041
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
error[PYI041]: PYI041.pyi:27:28: Use `float` instead of `int | float`

   |
27 | def f2(arg1: int, /, arg2: int | int | float) -> None: ...  # PYI041
   |                            ^^^^^^^^^^^^^^^^^
   |
error[PYI041]: PYI041.pyi:33:24: Use `float` instead of `int | float`

   |
33 | async def f4(**kwargs: int | int | float) -> None: ...  # PYI041
   |                        ^^^^^^^^^^^^^^^^^
   |
error[PYI041]: PYI041.pyi:39:24: Use `complex` instead of `float | complex`

   |
37 |     def good(self, arg: int) -> None: ...
38 | 
39 |     def bad(self, arg: int | float | complex) -> None: ...  # PYI041
   |                        ^^^^^^^^^^^^^^^^^^^^^
   |
error[PYI041]: PYI041.pyi:39:24: Use `complex` instead of `int | complex`

   |
37 |     def good(self, arg: int) -> None: ...
38 | 
39 |     def bad(self, arg: int | float | complex) -> None: ...  # PYI041
   |                        ^^^^^^^^^^^^^^^^^^^^^
   |
