crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI041_PYI041_4.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI041_4.py:4:11: PYI041 Use `float` instead of `int | float`
  |
4 | def f1(a: "U" "no[int, fl" "oat, Foo]") -> "None": ...
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041
5 | def f2(a: "Uno[int, float, Foo]") -> "None": ...
6 | def f3(a: """Uno[int, float, Foo]""") -> "None": ...
  |
  = help: Remove redundant type

PYI041_4.py:5:12: PYI041 [*] Use `float` instead of `int | float`
  |
4 | def f1(a: "U" "no[int, fl" "oat, Foo]") -> "None": ...
5 | def f2(a: "Uno[int, float, Foo]") -> "None": ...
  |            ^^^^^^^^^^^^^^^^^^^^ PYI041
6 | def f3(a: """Uno[int, float, Foo]""") -> "None": ...
7 | def f4(a: "Uno[in\
  |
  = help: Remove redundant type

ℹ Unsafe fix
2 2 | 
3 3 | 
4 4 | def f1(a: "U" "no[int, fl" "oat, Foo]") -> "None": ...
5   |-def f2(a: "Uno[int, float, Foo]") -> "None": ...
  5 |+def f2(a: "Uno[float, Foo]") -> "None": ...
6 6 | def f3(a: """Uno[int, float, Foo]""") -> "None": ...
7 7 | def f4(a: "Uno[in\
8 8 | t, float, Foo]") -> "None": ...

PYI041_4.py:6:14: PYI041 [*] Use `float` instead of `int | float`
  |
4 | def f1(a: "U" "no[int, fl" "oat, Foo]") -> "None": ...
5 | def f2(a: "Uno[int, float, Foo]") -> "None": ...
6 | def f3(a: """Uno[int, float, Foo]""") -> "None": ...
  |              ^^^^^^^^^^^^^^^^^^^^ PYI041
7 | def f4(a: "Uno[in\
8 | t, float, Foo]") -> "None": ...
  |
  = help: Remove redundant type

ℹ Unsafe fix
3 3 | 
4 4 | def f1(a: "U" "no[int, fl" "oat, Foo]") -> "None": ...
5 5 | def f2(a: "Uno[int, float, Foo]") -> "None": ...
6   |-def f3(a: """Uno[int, float, Foo]""") -> "None": ...
  6 |+def f3(a: """Uno[float, Foo]""") -> "None": ...
7 7 | def f4(a: "Uno[in\
8 8 | t, float, Foo]") -> "None": ...

PYI041_4.py:7:11: PYI041 [*] Use `float` instead of `int | float`
  |
5 |   def f2(a: "Uno[int, float, Foo]") -> "None": ...
6 |   def f3(a: """Uno[int, float, Foo]""") -> "None": ...
7 |   def f4(a: "Uno[in\
  |  ___________^
8 | | t, float, Foo]") -> "None": ...
  | |_______________^ PYI041
  |
  = help: Remove redundant type

ℹ Unsafe fix
4 4 | def f1(a: "U" "no[int, fl" "oat, Foo]") -> "None": ...
5 5 | def f2(a: "Uno[int, float, Foo]") -> "None": ...
6 6 | def f3(a: """Uno[int, float, Foo]""") -> "None": ...
7   |-def f4(a: "Uno[in\
8   |-t, float, Foo]") -> "None": ...
  7 |+def f4(a: Uno[float, Foo]) -> "None": ...
