crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI045_PYI045.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI045 `__iter__` methods should return an `Iterator`, not an `Iterable`
  --> PYI045.py:12:27
   |
12 |     def __iter__(self) -> typing.Iterable[int]:
   |                           ^^^^^^^^^^^^^^^^^^^^
   |

PYI045 `__iter__` methods should return an `Iterator`, not an `Iterable`
  --> PYI045.py:20:27
   |
20 |     def __iter__(self) -> typing.Iterable:
   |                           ^^^^^^^^^^^^^^^
   |

PYI045 `__iter__` methods should return an `Iterator`, not an `Iterable`
  --> PYI045.py:28:27
   |
28 |     def __iter__(self) -> collections.abc.Iterable[int]:
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PYI045 `__iter__` methods should return an `Iterator`, not an `Iterable`
  --> PYI045.py:36:27
   |
36 |     def __iter__(self) -> collections.abc.Iterable:
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^
   |

PYI045 `__iter__` methods should return an `Iterator`, not an `Iterable`
  --> PYI045.py:44:27
   |
44 |     def __iter__(self) -> Iterable:
   |                           ^^^^^^^^
   |

PYI045 `__aiter__` methods should return an `AsyncIterator`, not an `AsyncIterable`
  --> PYI045.py:79:28
   |
79 |     def __aiter__(self) -> typing.AsyncIterable[int]:
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PYI045 `__aiter__` methods should return an `AsyncIterator`, not an `AsyncIterable`
  --> PYI045.py:84:28
   |
84 |     def __aiter__(self) -> typing.AsyncIterable:
   |                            ^^^^^^^^^^^^^^^^^^^^
   |
