crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI051_PYI051.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI051 `Literal["foo"]` is redundant in a union with `str`
 --> PYI051.py:4:18
  |
4 | A: str | Literal["foo"]
  |                  ^^^^^
  |

PYI051 `Literal[b"bar"]` is redundant in a union with `bytes`
 --> PYI051.py:5:37
  |
5 | B: TypeAlias = typing.Union[Literal[b"bar", b"foo"], bytes, str]
  |                                     ^^^^^^
  |

PYI051 `Literal[b"foo"]` is redundant in a union with `bytes`
 --> PYI051.py:5:45
  |
5 | B: TypeAlias = typing.Union[Literal[b"bar", b"foo"], bytes, str]
  |                                             ^^^^^^
  |

PYI051 `Literal[5]` is redundant in a union with `int`
 --> PYI051.py:6:37
  |
6 | C: TypeAlias = typing.Union[Literal[5], int, typing.Union[Literal["foo"], str]]
  |                                     ^
  |

PYI051 `Literal["foo"]` is redundant in a union with `str`
 --> PYI051.py:6:67
  |
6 | C: TypeAlias = typing.Union[Literal[5], int, typing.Union[Literal["foo"], str]]
  |                                                                   ^^^^^
  |

PYI051 `Literal[b"str_bytes"]` is redundant in a union with `bytes`
 --> PYI051.py:7:37
  |
7 | D: TypeAlias = typing.Union[Literal[b"str_bytes", 42], bytes, int]
  |                                     ^^^^^^^^^^^^
  |

PYI051 `Literal[42]` is redundant in a union with `int`
 --> PYI051.py:7:51
  |
7 | D: TypeAlias = typing.Union[Literal[b"str_bytes", 42], bytes, int]
  |                                                   ^^
  |

PYI051 `Literal["foo"]` is redundant in a union with `str`
 --> PYI051.py:8:76
  |
8 | E: TypeAlias = typing.Union[typing.Union[typing.Union[typing.Union[Literal["foo"], str]]]]
  |                                                                            ^^^^^
  |

PYI051 `Literal["foo"]` is redundant in a union with `str`
 --> PYI051.py:9:81
  |
9 | F: TypeAlias = typing.Union[str, typing.Union[typing.Union[typing.Union[Literal["foo"], int]]]]
  |                                                                                 ^^^^^
  |

PYI051 `Literal["foo"]` is redundant in a union with `str`
  --> PYI051.py:10:69
   |
10 | G: typing.Union[str, typing.Union[typing.Union[typing.Union[Literal["foo"], int]]]]
   |                                                                     ^^^^^
   |

PYI051 `Literal[1J]` is redundant in a union with `complex`
  --> PYI051.py:12:31
   |
12 | def func(x: complex | Literal[1J], y: Union[Literal[3.14], float]): ...
   |                               ^^
   |

PYI051 `Literal[3.14]` is redundant in a union with `float`
  --> PYI051.py:12:53
   |
12 | def func(x: complex | Literal[1J], y: Union[Literal[3.14], float]): ...
   |                                                     ^^^^
   |
